# PodcastAnything

./: .env.example  .gitignore  README.md  SYSTEM.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infra/: INFRA.md  app.py
infra/layers/: requirements.txt
infra/ml_publication_infra/: __init__.py  stack.py
infra/podcast_anything_infra/: __init__.py  stack.py
scripts/: fetch_youtube_transcript.py  run_local_pipeline.py  start_execution.py  start_execution.sh  test.sh
src/ml_publication/: __init__.py  article.py  config.py  event_schema.py  llm.py  s3.py  tts.py
src/ml_publication/handlers/: fetch_article.py  generate_audio.py  rewrite_script.py
src/podcast_anything/: __init__.py  article.py  config.py  document.py  event_schema.py  llm.py  s3.py  tts.py  youtube.py
src/podcast_anything/api/: __init__.py  handlers.py  http.py  service.py
src/podcast_anything/handlers/: __init__.py  fetch_article.py  generate_audio.py  rewrite_script.py
tests/: TESTS.md  test_api.py  test_article.py  test_config.py  test_document.py  test_event_schema.py  test_handlers.py  test_llm.py  test_start_execution_script.py  test_tts.py  test_youtube.py
