[project]
name = "podcast-anything"
version = "0.1.0"
description = "Turn source content into podcast-ready scripts and audio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "requests",
  "beautifulsoup4",
  "awscli>=1.44.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
