[project]
name = "podcast-anything"
version = "0.1.0"
description = "Turn source content into podcast-ready scripts and audio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "requests",
  "beautifulsoup4",
  "youtube-transcript-api",
  "awscli>=1.44.43",
]

[project.optional-dependencies]
infra = [
  "aws-cdk-lib>=2.0.0,<3.0.0",
  "constructs>=10.0.0,<11.0.0",
]
dev = [
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
